# AI4REG

./: .env.example  .gitignore  CHANGELOG.md  Procfile  README.md  VERSIONEN.md  docker-compose.yml  generate_konzept_pdf.py  konzept_plan.md  ngdai_architektur.html  ngdai_produktkonzept.html  nixpacks.toml  pyproject.toml  railway.toml
.claude_memory/: MEMORY.md  agent_ba_po_konzept.md  agent_explore_3rp_festlegung.md  agent_explore_4rp_festlegung.md  agent_explore_bnetza_beschlusskammern.md  feedback_workflow.md  project_ngdai_status.md  session_gespraechsverlauf.md  user_hamid.md
Geschäftsberichte/2024/: 2025_01_Ellwangen_EnBW_ODR_GB 2024.txt  684ab3ae4aca9555d4d82dbc_SWK-GB-2024_RE_bf.txt  GB24_Gesamt.txt  Geschaeftsbericht-2024.txt  Geschaeftsbericht-24.txt  Geschaeftsbericht_2024 (1).txt  Geschäfts- & Nachhaltigkeitsbericht 2024.txt  Geschäftsbericht 2024 _ enercity.com.txt  Geschäftsbericht SachsenEnergie 2024.txt  Geschäftsjahr 2024 - Stadtwerke Osnabrück.txt  MVV_Geschaeftsbericht_GJ_2024_dt.txt  OVVG_Geschaeftsbericht_2024.txt  SWM_Geschaeftsbericht_2024_geschuetzt.txt  SW_Solingen_GB_2023-2024.txt  Taetigkeitsbericht_2024.txt  ausgabe.txt  enbw-geschaeftsbericht-2024 (1).txt  erster-geschaeftsbericht-als-hamburger-energienetze-gmbh-data.txt  geschäftsbericht-2024-final.txt  lew_gb_2024_safe-druck.txt  (+3 more)
marktakteure/: 2026-03-23_OeffentlicheMarktakteure_Strom.csv
scripts/: init_extensions.sql
tests/: conftest.py  test_entities.py  test_extraction.py  test_ingestion.py  test_query.py
versionen/: ngdai_produktkonzept_v1.0_2026-03-23.html
(+96 files in other folders)
